deployment/Kubernetes/base/prototype/prototype-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prototype
  name: prototype
spec:
  selector:
    matchLabels:
      app: prototype
  replicas: 1
  template:
    metadata:
      labels:
        app: prototype
    spec:
      containers:
        - name: ampersand-prototype
          ports:
            - containerPort: 80
