deployment/Kubernetes/base/prototype/prototype-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prototype
  name: prototype
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: prototype
  type: ClusterIP
