deployment/Kubernetes/base/prototype/prototype-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prototype-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prototype.tarski.nl
      secretName: prototype-tls
  rules:
    - host: prototype.tarski.nl
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: prototype
                port:
                  number: 80
